unpackaged/main/default/objects/Zip_Code_Qualification__c/Zip_Code_Qualification__c.object-meta.xml
<CustomObject>
    <label>Zip Code Qualification</label>
    <nameField>
        <label>Zip Code Qualification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Code Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>