unpackaged/main/default/objects/Zip_Code_Qualification__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case Type</label>
    <referenceTo>litify_pm__Case_Type__c</referenceTo>
    <relationshipLabel>Zip Code Qualifications</relationshipLabel>
    <relationshipName>Zip_Code_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>