unpackaged/main/default/objects/Zip_Code_Qualification__c/fields/PWS_Id__c.field-meta.xml
<CustomField>
    <fullName>PWS_Id__c</fullName>
    <label>PWS Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>