unpackaged/main/default/objects/Zip_Code_Qualification__c/fields/PWS_Name__c.field-meta.xml
<CustomField>
    <fullName>PWS_Name__c</fullName>
    <label>PWS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>