unpackaged/main/default/objects/Zip_Code_Qualification__c/fields/PWS_Primary_Source__c.field-meta.xml
<CustomField>
    <fullName>PWS_Primary_Source__c</fullName>
    <defaultValue>&quot;Surfacewater&quot;</defaultValue>
    <label>PWS Primary Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Surfacewater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>