unpackaged/main/default/objects/Zip_Code_Qualification__c/fields/PWS_State__c.field-meta.xml
<CustomField>
    <fullName>PWS_State__c</fullName>
    <label>PWS State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>