unpackaged/main/default/objects/Zip_Code_Qualification__c/fields/PWS_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>PWS_Zip_Code__c</fullName>
    <label>PWS Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>