unpackaged/main/default/objects/Zip_Code_Qualification__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>PWS_Zip_Code__c</columns>
    <columns>Case_Type__c</columns>
    <columns>PWS_Id__c</columns>
    <columns>PWS_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
</ListView>