unpackaged/main/default/objects/Zip_Code_Qualification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>PWS_Zip_Code__c</columns>
    <columns>PWS_State__c</columns>
    <columns>Case_Type__c</columns>
    <columns>PWS_Id__c</columns>
    <columns>PWS_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>