unpackaged/main/default/objects/Zip_Code_Qualification__c/listViews/Copy_of_Active.listView-meta.xml
<ListView>
    <fullName>Copy_of_Active</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>PWS_Zip_Code__c</columns>
    <columns>Case_Type__c</columns>
    <columns>PWS_Id__c</columns>
    <columns>PWS_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Duplicate</label>
</ListView>